--- a/locale/zh.po
+++ b/locale/zh.po
@@ -3,7 +3,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: zh\n"
-"POT-Creation-Date: 2011-11-09 14:11+CET\n"
+"POT-Creation-Date: 2011-11-10 11:11+CET\n"
 "PO-Revision-Date: 2007-10-30 17:58+0100\n"
 "Last-Translator: Zhouli <zhouli@in-girum.net>\n"
 "Language-Team:  <zh@li.org>\n"
@@ -1788,6 +1788,18 @@ msgstr "主页"
 msgid "Hungarian"
 msgstr "匈牙利语"
 
+#: ../ui/base/login.xml.en:42
+#, fuzzy
+msgctxt "label"
+msgid "I don't have an account or I forgot my password."
+msgstr "改变内设"
+
+#: ../ui/base/login.xml.en:44
+#, fuzzy
+msgctxt "label"
+msgid "I forgot my password."
+msgstr "改变内设"
+
 #: ../tracker/tracker_views.py:51
 msgid "Id"
 msgstr ""
@@ -2339,7 +2351,7 @@ msgstr "写入"
 msgid "October"
 msgstr ""
 
-#: ../ui/base/login.xml.en:51 ../blog/ui/Post_view.xml.en:13
+#: ../ui/base/login.xml.en:48 ../blog/ui/Post_view.xml.en:13
 msgctxt "button"
 msgid "Ok"
 msgstr ""
@@ -5327,16 +5339,6 @@ msgstr "名称"
 #~ msgctxt "title attribute"
 #~ msgid "Help"
 #~ msgstr "帮助"
-
-#, fuzzy
-#~ msgctxt "link"
-#~ msgid "I forgot my password"
-#~ msgstr "改变内设"
-
-#, fuzzy
-#~ msgctxt "legend"
-#~ msgid "If you have forgotten your password"
-#~ msgstr "改变内设"
 
 #, fuzzy
 #~ msgid "Inactive"
