--- a/locale/it.po
+++ b/locale/it.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
-"POT-Creation-Date: 2011-11-09 14:11+CET\n"
+"POT-Creation-Date: 2011-11-10 11:11+CET\n"
 "PO-Revision-Date: 2004-11-26 14:39+0100\n"
 "Last-Translator: Paolo Dina <paolo@php3.it>\n"
 "Language-Team: Italian <paolo@php3.it>\n"
@@ -1814,6 +1814,18 @@ msgstr "Cartella personale"
 msgid "Hungarian"
 msgstr "Ungherese"
 
+#: ../ui/base/login.xml.en:42
+#, fuzzy
+msgctxt "label"
+msgid "I don't have an account or I forgot my password."
+msgstr "Modifica l'impostazione predefinita"
+
+#: ../ui/base/login.xml.en:44
+#, fuzzy
+msgctxt "label"
+msgid "I forgot my password."
+msgstr "Modifica l'impostazione predefinita"
+
 #: ../tracker/tracker_views.py:51
 msgid "Id"
 msgstr ""
@@ -2376,7 +2388,7 @@ msgstr "scrivi"
 msgid "October"
 msgstr ""
 
-#: ../ui/base/login.xml.en:51 ../blog/ui/Post_view.xml.en:13
+#: ../ui/base/login.xml.en:48 ../blog/ui/Post_view.xml.en:13
 #, fuzzy
 msgctxt "button"
 msgid "Ok"
@@ -6157,11 +6169,6 @@ msgstr "Titolo"
 #~ "remain in full compliance."
 
 #, fuzzy
-#~ msgctxt "link"
-#~ msgid "I forgot my password"
-#~ msgstr "Modifica l'impostazione predefinita"
-
-#, fuzzy
 #~ msgid ""
 #~ "IN NO EVENT UNLESS REQUIRED BY APPLICABLE LAW OR AGREED TO IN WRITING "
 #~ "WILL ANY COPYRIGHT HOLDER, OR ANY OTHER PARTY WHO MODIFIES AND/OR CONVEYS "
@@ -6269,11 +6276,6 @@ msgstr "Titolo"
 #~ "If you cannot distribute so as to satisfy simultaneously your obligations "
 #~ "under this License and any other pertinent obligations, then as a "
 #~ "consequence you may not distribute the Program at all."
-
-#, fuzzy
-#~ msgctxt "legend"
-#~ msgid "If you have forgotten your password"
-#~ msgstr "Modifica l'impostazione predefinita"
 
 #~ msgid ""
 #~ "In addition, mere aggregation of another work not based on the Program "
