--- a/locale/fr.po
+++ b/locale/fr.po
@@ -248,14 +248,13 @@ msgid "<g id='2'>Change default</g>  <g id='3'>Remove</g>"
 msgstr "<g id='2'>Changer la valeur par défaut</g>  <g id='3'>Supprimer</g>"
 
 #: ../agenda/ui/reminder_widget.xml.en:9
-#, fuzzy
 msgctxt "label"
 msgid ""
 "<g id='2'>I want to be remind</g>  <g id='3'>  <x id='4'/>  <x id='5'/> "
 "${reminders} before the event. </g>"
 msgstr ""
-"<g id='2'>Titre</g>  <g id='3'>* </g>  <x id='4'/>  <g id='5'>${title/error} "
-"<x id='6'/></g>"
+"<g id='2'>Je veux être averti</g>  <g id='3'>  <x id='4'/>  <x id='5'/> "
+"${reminders} avant l'évènement. </g>"
 
 #: ../ui/user/profile.xml.en:19 ../ui/generic/icons_view.xml.en:16
 msgctxt "link"
@@ -486,9 +485,8 @@ msgid "Are you sure you want to delete this resource?"
 msgstr "Êtes-vous sûr de vouloir supprimer cette ressource ?"
 
 #: ../buttons.py:69
-#, fuzzy
 msgid "Are you sure you want to delete this?"
-msgstr "Êtes-vous sûr de vouloir supprimer cette ressource ?"
+msgstr "Êtes-vous sûr de vouloir supprimer cela ?"
 
 #: ../enumerates.py:85 ../agenda/agenda_views.py:56
 msgid "August"
@@ -554,9 +552,8 @@ msgid "Bing site verification key"
 msgstr "Clé de vérification de Bing"
 
 #: ../blog/blog.py:120
-#, fuzzy
 msgid "Blog"
-msgstr "Billet de blog"
+msgstr "Blog"
 
 #: ../blog/blog.py:95
 msgid "Blog Post"
@@ -629,7 +626,7 @@ msgstr "Feuille de style CSS"
 
 #: ../config_theme.py:40
 msgid "CSS Style"
-msgstr ""
+msgstr "Syle CSS"
 
 #: ../agenda/event.py:362 ../agenda/calendars.py:203
 msgid "Calendar"
@@ -1131,9 +1128,8 @@ msgid "Event model"
 msgstr "Modèle d'événement"
 
 #: ../agenda/emails.py:27
-#, fuzzy
 msgid "Event reminder"
-msgstr "Modèle d'événement"
+msgstr "Rappel d'évènement"
 
 #: ../agenda/recurrence.py:145
 msgid "Every"
@@ -1354,10 +1350,9 @@ msgstr "Hongrois"
 #: ../ui/base/login.xml.en:40
 msgctxt "label"
 msgid "I forgot my password."
-msgstr "J'ai oublié mon mot de passe"
+msgstr "J'ai oublié mon mot de passe."
 
 #: ../users_views.py:480
-#, fuzzy
 msgid ""
 "If no password is given an email will be sent to the user, asking him to "
 "choose his password."
@@ -1396,7 +1391,6 @@ msgid "Inherited field"
 msgstr "Champs hérités"
 
 #: ../ui/website/config.xml.en:17
-#, fuzzy
 msgctxt "button"
 msgid "Initialize new modules"
 msgstr "Initialiser les nouveaux plugins"
@@ -1419,9 +1413,8 @@ msgid "Installed software"
 msgstr "Logiciels installés"
 
 #: ../agenda/event.py:232
-#, fuzzy
 msgid "Instance removed"
-msgstr "Langues supprimées."
+msgstr "L'instance a été supprimée"
 
 #: ../config_models.py:40
 msgid "Integer"
@@ -1700,13 +1693,11 @@ msgid "Name"
 msgstr "Nom"
 
 #: ../ui/website/config.xml.en:9
-#, fuzzy
 msgctxt "legend"
 msgid "New modules"
-msgstr "Modules"
+msgstr "Nouveaux plugins"
 
 #: ../ui/website/config.xml.en:11
-#, fuzzy
 msgctxt "paragraph"
 msgid ""
 "New modules have been detected, pleae click the button below to initialize "
@@ -1716,7 +1707,6 @@ msgstr ""
 "dessous pour les initialiser :"
 
 #: ../config.py:98
-#, fuzzy
 msgid "New modules initialized."
 msgstr "Nouveaux plugins initialisés."
 
@@ -2079,9 +2069,8 @@ msgid "Recurrence"
 msgstr "Récurrence"
 
 #: ../emails.py:92
-#, fuzzy
 msgid "Registration confirmation"
-msgstr "Inscription confirmée"
+msgstr "Confirmation d'inscription"
 
 #: ../emails.py:125
 msgid "Registration confirmed"
@@ -2101,7 +2090,7 @@ msgstr "Supprimer"
 
 #: ../agenda/event.py:147
 msgid "Remove all events in the series"
-msgstr ""
+msgstr "Supprimer toutes les occurences de l'évènement"
 
 #: ../config_access.py:87
 msgid "Remove and modify"
@@ -2109,7 +2098,7 @@ msgstr "Supprimer et modifier"
 
 #: ../agenda/event.py:145
 msgid "Remove event at {date}"
-msgstr ""
+msgstr "Supprimer l'évènement du {date}"
 
 #: ../order.py:72
 msgid "Remove from ordered list"
@@ -2158,9 +2147,8 @@ msgid "Resend Confirmation"
 msgstr "Réenvoyer la demande de confirmation"
 
 #: ../agenda/event.py:224
-#, fuzzy
 msgid "Resource removed"
-msgstr "Aucune ressource supprimée."
+msgstr "La resource a été supprimée"
 
 #: ../config_access.py:117
 msgid "Resource type"
@@ -2744,7 +2732,7 @@ msgstr "Désinscrire"
 
 #: ../agenda/recurrence.py:159
 msgid "Until"
-msgstr ""
+msgstr "Jusqu'au"
 
 #: ../config_groups.py:39
 msgid "Update"
@@ -2907,7 +2895,7 @@ msgstr "Visible ?"
 
 #: ../agenda/emails.py:29
 msgid "We remind you the event \"{title}\" is scheduled at {date}, {time}."
-msgstr ""
+msgstr "Nous vous rappelons que l'événement \"{title}\" est prévu le {date} à {time}"
 
 #: ../webpage.py:50
 msgid "Web Page"
@@ -3107,7 +3095,7 @@ msgstr "Votre compte a été réactivé"
 #: ../ui/register_terms_of_service.xml.en:8
 msgctxt "paragraph"
 msgid "Your browser does not support iframes."
-msgstr ""
+msgstr "Votre navigateur ne supporte pas les iframes."
 
 #: ../messages.py:26
 msgid "Your confirmation key is invalid."
