agenda: fix english (& french) for the reminder select

--- a/locale/es.po
+++ b/locale/es.po
@@ -3,7 +3,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
-"POT-Creation-Date: 2012-04-03 15:04+CET\n"
+"POT-Creation-Date: 2012-04-05 13:04+CET\n"
 "PO-Revision-Date: 2006-12-06 16:23+0100\n"
 "Last-Translator: J. David Ibáñez <jdavid@itaapy.com>\n"
 "Language-Team: Spanish\n"
@@ -981,7 +981,7 @@ msgid "Day"
 msgstr "Mayo"
 
 #: ../agenda/reminders.py:31
-msgid "Days"
+msgid "Day(s)"
 msgstr ""
 
 #: ../agenda/agenda_views.py:60 ../datatypes.py:290
@@ -1378,7 +1378,7 @@ msgid "Home"
 msgstr ""
 
 #: ../agenda/reminders.py:30
-msgid "Hours"
+msgid "Hour(s)"
 msgstr ""
 
 #: ../utils.py:113
@@ -1425,6 +1425,10 @@ msgstr "Exportar"
 #, fuzzy
 msgid "Inactive"
 msgstr "Activo"
+
+#: ../folder.py:61
+msgid "Index"
+msgstr ""
 
 #: ../config_models.py:92
 msgid "Inherited field"
@@ -1704,7 +1708,7 @@ msgid "Microsoft Windows (32-bit)"
 msgstr ""
 
 #: ../agenda/reminders.py:29
-msgid "Minutes"
+msgid "Minute(s)"
 msgstr ""
 
 #: ../datatypes.py:190 ../datatypes.py:202
