--- a/locale/en.po
+++ b/locale/en.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0.3.0\n"
-"POT-Creation-Date: 2012-04-03 15:04+CET\n"
+"POT-Creation-Date: 2012-04-05 13:04+CET\n"
 "PO-Revision-Date: 2001-07-08 17:07+CET\n"
 "Last-Translator: jdavid\n"
 "Language-Team: ??\n"
@@ -907,7 +907,7 @@ msgid "Day"
 msgstr ""
 
 #: ../agenda/reminders.py:31
-msgid "Days"
+msgid "Day(s)"
 msgstr ""
 
 #: ../agenda/agenda_views.py:60 ../datatypes.py:290
@@ -1288,7 +1288,7 @@ msgid "Home"
 msgstr ""
 
 #: ../agenda/reminders.py:30
-msgid "Hours"
+msgid "Hour(s)"
 msgstr ""
 
 #: ../utils.py:113
@@ -1330,6 +1330,10 @@ msgstr ""
 
 #: ../users.py:58
 msgid "Inactive"
+msgstr ""
+
+#: ../folder.py:61
+msgid "Index"
 msgstr ""
 
 #: ../config_models.py:92
@@ -1590,7 +1594,7 @@ msgid "Microsoft Windows (32-bit)"
 msgstr ""
 
 #: ../agenda/reminders.py:29
-msgid "Minutes"
+msgid "Minute(s)"
 msgstr ""
 
 #: ../datatypes.py:190 ../datatypes.py:202
