--- a/locale/es.po
+++ b/locale/es.po
@@ -259,8 +259,8 @@ msgstr "<g id='6'>Identificarse</g>  <g id='7'>Registrarse</g>"
 #, fuzzy
 msgctxt "label"
 msgid ""
-"<g id='2'>I want to get an email</g>  <g id='3'>  <x id='4'/>  <x id='5'/> "
-"${reminders} before the event. </g>"
+"<g id='2'>I want to get a reminder e-mail</g>  <g id='3'>  <x id='4'/>  <x "
+"id='5'/> ${reminders} before the start of the event. </g>"
 msgstr ""
 "<g id='1'> ${widget/title} </g>  <g id='2'>(obligatorio)</g>  <g id='3'>"
 "(multiple)</g>  <g id='4'>Formato: 'yyyy-mm-dd'</g>"
