--- a/locale/fr.po
+++ b/locale/fr.po
@@ -259,11 +259,11 @@ msgstr "<g id='2'>Changer la valeur par défaut</g>  <g id='3'>Supprimer</g>"
 #: ../agenda/ui/widgets/reminder.xml.en:9
 msgctxt "label"
 msgid ""
-"<g id='2'>I want to get an email</g>  <g id='3'>  <x id='4'/>  <x id='5'/> "
-"${reminders} before the event. </g>"
+"<g id='2'>I want to get a reminder e-mail</g>  <g id='3'>  <x id='4'/>  <x "
+"id='5'/> ${reminders} before the start of the event. </g>"
 msgstr ""
-"<g id='2'>Je veux recevoir un email</g>  <g id='3'>  <x id='4'/>  <x id='5'/"
-"> ${reminders} avant l'évènement. </g>"
+"<g id='2'>Je souhaite recevoir un e-mail de rappel</g>  <g id='3'>  <x id='4'/>  <x "
+"id='5'/> ${reminders} avant le début de l'évènement. </g>"
 
 #: ../ui/user/profile.xml.en:19 ../ui/generic/icons_view.xml.en:16
 msgctxt "link"
