--- a/locale/locale.pot
+++ b/locale/locale.pot
@@ -2532,7 +2532,7 @@ msgstr ""
 
 #: ../agenda/ui/widgets/reminder.xml.en:9
 msgctxt "label"
-msgid "<g id='2'>I want to get an email</g>  <g id='3'>  <x id='4'/>  <x id='5'/> ${reminders} before the event. </g>"
+msgid "<g id='2'>I want to get a reminder e-mail</g>  <g id='3'>  <x id='4'/>  <x id='5'/> ${reminders} before the start of the event. </g>"
 msgstr ""
 
 #: ../ui/base/login.xml.en:20
