Get ready to release 0.62.9

--- a/RELEASE-0.62.9
+++ b/RELEASE-0.62.9
@@ -1,4 +1,4 @@
-ikaaro 0.62.9 (2012/05/XX)
+ikaaro 0.62.9 (2012/05/27)
 ==========================
 
 This is a Content Management System built on Python & itools, among
